--- a/projects/static/projects/styles.css
+++ b/projects/static/projects/styles.css
@@ -1754,7 +1754,7 @@ footer {
     display: none;
     position: absolute;
     background-color: #222;
-    min-width: 250px;
+    min-width: 500px;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
     z-index: 1000;
     border-radius: 8px;
@@ -2020,4 +2020,54 @@ ul.navbar-nav {
     /* This ensures that items are in a row */
     align-items: center; /* Vertically aligns items in the center */
     margin-right: 60px;
+}
+
+
+.notification-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.notification-list li {
+    padding: 10px;
+    background-color: #444;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.notification-list li:hover {
+    background-color: #555;
+}
+
+
+
+.notification-text {
+    flex: 1;
+}
+
+.notification-timestamp {
+    font-size: 12px;
+    color: #bbb;
+    text-align: right;
+    margin-left: 10px;
+}
+
+.delete-notification-btn {
+    background: none;
+    border: none;
+    color: #bbb;
+    font-size: 18px;
+    cursor: pointer;
+    padding: 0;
+    margin-left: 10px;
+    transition: color 0.3s ease;
+}
+
+.delete-notification-btn:hover {
+    color: #ff4d4f;
 }
