--- a/projects/templates/projects/register.html
+++ b/projects/templates/projects/register.html
@@ -65,8 +65,8 @@
                 <input type="url" id="linkedin" name="linkedin" class="form-control">
             </div>
             <div class="form-group">
-                <label for="profile_picture">Profile Picture (Optional):</label>
-                <input type="file" id="profile_picture" name="profile_picture" class="form-control">
+                <label for="profile_picture">Profile Picture (Required):</label>
+                <input type="file" id="profile_picture" name="profile_picture" class="form-control" required>
             </div>
         </div>
         <div class="col-md-6">
