--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -18,11 +18,11 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid d-flex justify-content-between">
             <!-- Logo and Title -->
-            <a class="navbar-brand" href="{% url 'home' %}">
-                <img src="/static/projects/images/logo.png" alt="DevLink Logo" class="navbar-logo">
+            <a class="navbar-brand navbar-title" href="{% url 'home' %}">
+                <img src="/static/projects/images/logo.png" alt="DevLink Logo" class="navbar-logo" color="#ffff">
                 DevLink
             </a>
     
