--- a/projects/static/projects/styles.css
+++ b/projects/static/projects/styles.css
@@ -2165,14 +2165,15 @@ ul.navbar-nav {
     align-items: center;
     background-color: #87CEEB; /* iOS-style white background */
     border-top: 1px solid #E0E0E0; /* Light grey border at the top */
-    padding: 10px 0;
+    padding: 10px 10px;
     position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
-    z-index: 1000; /* Keep it on top */
-    margin-bottom: -5px; 
+    z-index: 1100; /* Keep it on top */
+    height: 90px; 
+  
   
 }
 
